--- a/Pal.Client/Pal.Client.csproj
+++ b/Pal.Client/Pal.Client.csproj
@@ -13,6 +13,7 @@
 		<AssemblyName>Palace Pal</AssemblyName>
 		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)' == 'Release'">
@@ -31,8 +32,9 @@
 
 	<ItemGroup>
 		<PackageReference Include="DalamudPackager" Version="2.1.8" />
-		<PackageReference Include="Google.Protobuf" Version="3.21.8" />
-		<PackageReference Include="Grpc.Net.Client" Version="2.49.0" />
+		<PackageReference Include="Google.Protobuf" Version="3.21.9" />
+		<PackageReference Include="Grpc.Net.Client" Version="2.50.0" />
+		<PackageReference Include="Grpc.Net.Client.Web" Version="2.50.0" />
 		<PackageReference Include="Grpc.Tools" Version="2.50.0">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
