--- a/Pal.Server/appsettings.Production.json
+++ b/Pal.Server/appsettings.Production.json
@@ -1,4 +1,16 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Http2": {
+        "Url": "http://localhost:5415",
+        "Protocols": "Http2"
+      },
+      "Http1": {
+        "Url": "http://localhost:5416",
+        "Protocols": "Http1"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
